group 'com.centaurstech'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: "maven-publish"

sourceCompatibility = 1.8

repositories {
    maven{ url"http://maven.aliyun.com/nexus/content/groups/public" }
    mavenCentral()
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile group: 'cglib', name: 'cglib', version: '3.2.10'

    compile group: 'org.json', name: 'json', version: '20160212'
    compile 'com.squareup.okhttp3:okhttp:3.12.13'
    compile group: 'com.sun.mail', name: 'javax.mail', version: '1.6.0'
}
